# chess-engine

./: .gitignore  CMakeLists.txt  README.md  README.txt
include/: bitboard.h  board.h  evaluation.h  move.h  movegen.h  search.h  zobrist.h
src/: bitboard.cpp  board.cpp  evaluation.cpp  main.cpp  movegen.cpp  search.cpp  zobrist.cpp
tests/: README.md
